# demo-slack-z3-ai-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: poetry-build.yml
rebot/: __main__.py  db.py  main.py  mistral.py
rebot/ai/: functions.py  service.py
rebot/extensions/: chat_greet.py  format_markdown.py  function_catalog.py  math_z3_solve.py
rebot/fnchat/: main.py
rebot/fnformat/: main.py
rebot/fnmath/: main.py
rebot/fnsearch/: main.py
tests/: test_main.py
