[tool.poetry]
name = "re-bot"
version = "0.0.0"
description = ""
authors = ["Philipp Gayret <philipp@release-engineers.com>"]
readme = "README.md"
packages = [{ include = "rebot" }]
license = "SSPL-1.0"
classifiers = ["Private :: Do not Upload"]

[tool.poetry.scripts]
"rebot" = "rebot.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
slack-bolt = "^1.18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
